--- a/pages/uandc/uandc.wxml
+++ b/pages/uandc/uandc.wxml
@@ -1,12 +1,13 @@
 <!--pages/uandc/uandc.wxml-->
 <!--pages/handsignin/handsignin.wxml-->
 <view class="all">
+<view class="s1" >
   <view class="first">
     <input class="f1"  bindinput="getinfo"  auto-focus placeholder="请输入学生姓名(手机号码)"/>
   </view>
   <view class="second">
-    <button class="f2"  bindtap="qiandaofind">查询</button>
-    <button class="f2"  bindtap="qiandaoclear">清空</button>
+    <button class="f2"  bindtap="bdfind">查询</button>
+    <button class="f2"  bindtap="bdclear">清空</button>
   </view>
   <view class="first">
     <text class="texts">姓名：{{sname}}</text>
@@ -14,10 +15,12 @@
   <view class="first">
     <text class="texts">电话号码：{{sphone}}</text>
   </view>
-
+</view>
+ 
+<view class="s2">
 <view class='line'></view>
 <view class="text">已绑定课程</view>
-<scroll-view scroll-y="true" style="height: 85px">
+<scroll-view scroll-y="true" class="s21">
 <block wx:for="{{myclasslist}}"   wx:key="index"  > 
   <view class = "chanpin">
     <image class="chanpin-img" src="https://www.stringzc.top/{{item.images}}"></image>
@@ -32,10 +35,11 @@
   </view>
 </block>
 </scroll-view>
-
+</view>
+<view class=" s2" >
 <view class='line'></view>
 <view class="text">可绑定课程</view>
-<scroll-view scroll-y="true" style="height: 370px">
+<scroll-view scroll-y="true"  class="s21">
 <block wx:for="{{classlist}}"   wx:key="index"  > 
   <view class = "chanpin">
     <image class="chanpin-img" src="https://www.stringzc.top/{{item.images}}"></image>
@@ -50,6 +54,5 @@
   </view>
 </block>
 </scroll-view>
-
-
+</view>
 </view>
