--- a/pages/uandc/uandc.wxss
+++ b/pages/uandc/uandc.wxss
@@ -10,17 +10,25 @@ page{
   width: 100%;
   background-image: url(https://pic4.zhimg.com/v2-42e0e9c30fc52e5d0b793845c4e5cf45_r.jpg?source=1940ef5c);
 }
+.s1{
+  height: 20%;
+  width: 100%;
+}
+.s2{
+  height: 36%;
+  width: 100%;
+}
 .first{
   /* margin-top: 50%; */
-  height: 40px;
-  margin: 10px;
+  height: 15%;
+  margin: 10rpx;
   border: 10rpx solid #fa9a82;
   border-radius: 30rpx;
 }
 .f1{
   width: auto;
   height: 100%;
-  font-size: 16pt;
+  font-size: auto;
   color: #311116;
 }
 .f1:active{
@@ -31,24 +39,24 @@ page{
 }
 .f2{
   width: 40%;
-  height: 20%;
-  border: none;
-  border-radius: 30px;
-  line-height: 100rpx;
+  height: auto;
+  border: auto;
+  border-radius: 30rpx;
+  line-height: 120%;
   text-align: center;
   color: #f8f7f2;
-  font-size: 16pt;
+  font-size: auto;
   background: #F15F79; 
 }
 .f2:active{
   background-color: #949ba0;
 }
 .texts{
-  font-size: 16pt;
+  font-size: auto;
   color: #832b39;
 }
 .danhao{ 
-  font-size: 12px; color: gray;
+  font-size: auto; color: gray;
   height: 100rpx; margin-left: 20rpx;
   border-bottom: 1rpx solid #ECECEC; 
   background: white;
@@ -58,7 +66,7 @@ page{
 .chanpin{
   display: flex;
   padding: 15rpx;
-  height: 130rpx;
+  height: auto;
   border-bottom: 1rpx solid #ECECEC; 
   background: rgba(236, 183, 183, 0.123); 
 }
@@ -117,4 +125,8 @@ page{
   color: rgb(228, 24, 24);
   font-weight: 600;
   margin-left: 38%;
+}
+.s21{
+  height: 85%;
+  width: 100%;
 }
