--- a/pages/adduser/adduser.wxml
+++ b/pages/adduser/adduser.wxml
@@ -14,19 +14,26 @@
   <view class="input-box">
     <view class="wei-input">
       <icon type="waiting" color="#44ADFB" size="16"></icon>
-      <input class="input" auto-focus placeholder="请输入用户名"/>
+      <input class="input" auto-focus bindinput="names" placeholder="请输入用户名"/>
     </view>
     <view class="wei-input">
       <icon type="waiting" color="#44ADFB" size="16"></icon>
-      <input class="input" auto-focus placeholder="请输入手机号"/>
+      <input class="input" auto-focus bindinput="phones" placeholder="请输入手机号"/>
     </view>
     <view class="wei-input">
       <icon type="success" color="#44ADFB" size="16"></icon>
-      <input class="input" auto-focus placeholder="请输入密码"/>
+      <input class="input" auto-focus bindinput="pswd" placeholder="请输入密码"/>
     </view>
     <view class="wei-input">
       <icon type="success" color="#44ADFB" size="16"></icon>
-      <input class="input" auto-focus placeholder="请确认密码"/>
+      <input class="input" auto-focus bindinput="checkpswd" placeholder="请确认密码"/>
+    </view>
+    <view class="wei-input">
+      <icon type="success" color="#44ADFB" size="16"></icon>
+      <!-- <input class="input" auto-focus placeholder="请确认密码"/> -->
+      <picker mode="selector" range="{{array}}" value="{{index}}" bindchange="pickerChange">
+        <view class="input">用户权限：<text>{{array[index]}}</text></view>
+      </picker>
     </view>
   </view>
   <view class="sumbit-btn">
