--- a/pages/uandc/uandc.wxml
+++ b/pages/uandc/uandc.wxml
@@ -20,6 +20,9 @@
 <view class="s2">
 <view class='line'></view>
 <view class="text">已绑定课程</view>
+<view wx:if="{{shows}}">
+  {{values}}该学生没有任何课程快给他添加吧!
+</view>
 <scroll-view scroll-y="true" class="s21">
 <block wx:for="{{myclasslist}}"   wx:key="index"  > 
   <view class = "chanpin">
@@ -49,7 +52,7 @@
     </view>
     <view class="chanpin-num">
       <text class="mytext">计划{{item.keshi}}课时</text>
-      <button  class='goodbutton'  hover-class="hover"  data-id="{{item.id}}" bindtap="qiandao">绑定</button>
+      <button  class='goodbutton'  hover-class="hover"  data-id="{{item.id}}" bindtap="bd">绑定</button>
     </view>
   </view>
 </block>
