--- a/pages/myclass/myclass.wxml
+++ b/pages/myclass/myclass.wxml
@@ -4,7 +4,7 @@
 <swiper autoplay="{{true}}" circular="{{true}}" indicator-dots="{{true}}" interval="2000"class="s11">
  <block wx:for="{{myclass.imagelist}}" wx:key="urls">
     <swiper-item>
-      <image src="{{item.urls}}" class="slide-image" mode="widthFix" data-src='{{item.urls}}' />
+      <image src="https://www.stringzc.top/{{item.urls}}" class="slide-image" mode="widthFix" data-src='{{item.urls}}' />
     </swiper-item>
   </block>
 </swiper>
@@ -33,6 +33,7 @@
 </view>
 <view class="layer" animation="{{pwdAnimationData}}">
   <view style="margin-left: 22%; font-weight: 600; color: brown;font-size: 120%;">{{myclass.class}}签到详情</view>
+  <view wx:if="{{myclass.ret}}">暂时还没有签到记录</view>
   <scroll-view scroll-y="true" style="height: 92%">
   <block wx:for="{{myclass.qdlist}}"   wx:key="index"  >
   <view>
