--- a/pages/myclass/myclass.wxml
+++ b/pages/myclass/myclass.wxml
@@ -34,7 +34,7 @@
 <view class="layer" animation="{{pwdAnimationData}}">
   <view style="margin-left: 22%; font-weight: 600; color: brown;font-size: 120%;">{{myclass.class}}签到详情</view>
   <view wx:if="{{myclass.ret}}">暂时还没有签到记录</view>
-  <scroll-view scroll-y="true" style="height: 92%">
+  <scroll-view scroll-y="true" style="height: 90%">
   <block wx:for="{{myclass.qdlist}}"   wx:key="index"  >
   <view>
     <view class="divLine"></view>
@@ -46,7 +46,7 @@
 </block>
   <view class="divLine"></view>
   </scroll-view>
-    <view style="height: auto;">
-      <button class="btnConfirm" bindtap='cancel'>返回</button>
+<view >
+      <button  bindtap='cancel'>返回</button>
   </view>
 </view>
