--- a/pages/uandc/uandc.wxml
+++ b/pages/uandc/uandc.wxml
@@ -17,10 +17,10 @@
   </view>
 </view>
  
-<view class="s2">
+<view class="s3">
 <view class='line'></view>
 <view class="text">已绑定课程</view>
-<view wx:if="{{shows}}">
+<view wx:if="{{showmy}}">
   {{values}}该学生没有任何课程快给他添加吧!
 </view>
 <scroll-view scroll-y="true" class="s21">
@@ -42,6 +42,9 @@
 <view class=" s2" >
 <view class='line'></view>
 <view class="text">可绑定课程</view>
+<view wx:if="{{showc}}">
+  当前没有可用课程请先添加课程!
+</view>
 <scroll-view scroll-y="true"  class="s21">
 <block wx:for="{{classlist}}"   wx:key="index"  > 
   <view class = "chanpin">
