--- a/pages/admin/admin.wxml
+++ b/pages/admin/admin.wxml
@@ -6,7 +6,7 @@
       <button class="btn1" bindtap="goadduser" >用户添加</button>
     </view>
     <view  class="item">
-      <button class="btn2"  bindtap="goaddclass">课程添加</button>
+      <button class="btn2"  bindtap="gopchange">用户管理</button>
     </view>
   </view>
   <view class="all">
