--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -3,7 +3,7 @@
 <view class="item">
 
 <view class="login-icon">
-  <image class="login-img" src="/static/logins.jpg"></image>
+  <image class="login-img" src="https://stringzc.top/static/logins.jpg"></image>
 </view>
 
     <view class="login-item">
