--- a/adminROOT/pages/uandc/uandc.wxss
+++ b/adminROOT/pages/uandc/uandc.wxss
@@ -75,15 +75,15 @@ page{
   background: rgba(236, 183, 183, 0.123); 
 }
 .chanpin-img{
-  width: 110rpx;
-  height: 110rpx;
+  width: 105rpx;
+  height: 105rpx;
 }
 .chanpin-info{
   display: flex;
   flex-direction:  column;
   align-items:  flex-start;
   flex: 1;
-  margin-left: 15rpx;
+  margin-left: 12rpx;
 }
 .name{
   font-size: 40rpx; 
@@ -96,16 +96,23 @@ page{
 }
 
 .chanpin-num{
+  width: 44%;
   height: 80rpx;
   display: flex;
   margin-top: 30rpx;
-  margin-right: 40rpx;
+  margin-right: 50rpx;
   line-height: 45rpx;
   font-size: 40rpx; 
 }
+.mytext{
+  width: 40%;
+  font-size: 30rpx;
+  font-weight: 800;
+  
+}
 .goodbutton {
   /* margin-top: 0px; */
-  width: 40%;
+  width: 60%;
   background-color: rgb(252, 126, 67);
   color: white;
   /* border-radius: 1rpx; */
