评论页面，管理页面

--- a/adminROOT/pages/pchange/pchange.wxss
+++ b/adminROOT/pages/pchange/pchange.wxss
@@ -1,1 +1,44 @@
 /* pages/pchange/pchange.wxss */
+page{
+  width: 100%;
+  height: 100%;
+}
+.navBar {
+  display: flex;
+  justify-content: space-around;
+  height: 100rpx;
+  position: relative;
+  background: #fff;
+}
+
+.navItem {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 4rpx solid transparent;
+}
+
+.active {
+  color: blue;
+  border-bottom: 4rpx solid blue;
+}
+
+.content_wrapper{
+  flex: 1;
+}
+.card{
+  width: 90%;
+  margin-left: 5%;
+  height: 200rpx;
+  background: rgb(202, 240, 237);
+  border-radius: 10rpx;
+  box-shadow: 5px 5px 5px #d7e9e9;
+  display: flex;
+ }
+ .days{
+   margin: 50rpx;
+   width: 50%;
+   font-weight: 500;
+   text-align: center;
+   display: flex;
+ }
