--- a/adminROOT/pages/pchange/pchange.wxml
+++ b/adminROOT/pages/pchange/pchange.wxml
@@ -1,2 +1,110 @@
 <!--pages/pchange/pchange.wxml-->
-<text>pages/pchange/pchange.wxml</text>
+<view class="page">
+  <!-- 导航条.tab太多的时候需要使用scrollview -->
+  <view class="navBar">
+    <block wx:for="{{tabs}}" wx:key="item">
+      <view id="{{index}}" class="navItem {{tabIndex == index ? 'active' : '' }}" bindtap="onTabClick">
+        <view class="navItemTitle">{{item}}</view>
+      </view>
+    </block>
+  </view>
+
+  <!-- 内容区域 -->
+  <view class="content_wrapper">
+    <!-- 第一个tab -->
+    <block wx:if="{{tabIndex == 0}}">
+      <view>
+        <view class="card"> 
+        <view class="days">
+          <view>小程序已运行:</view>
+          <view style="color: red; font-size: x-large; font-weight: 800;font-family:cursive;">{{days}}天</view>
+          </view>
+          <view class="days">
+          <view>月活跃用户:</view>
+          <view style="color: red; font-size: x-large; font-weight: 800; font-family:cursive;">{{users}}个</view>
+          </view>
+        </view>
+      <swiper indicator-dots='true' display-multiple-items='1'   previous-margin='30'  style="height: 350rpx;">
+          <swiper-item >
+            <view style="display: flex;">
+              <view style="width: 50%;">
+              <image src="/static/sjfx.png" style="border-radius: 300rpx; height: 200rpx; width: 250rpx; margin: 20rpx;"/>
+              <view style="margin-left: 70rpx;">数据分析</view>
+              </view>
+              <view style="width: 50%;">
+                <image src="/static/yjzx.png" style="border-radius: 300rpx; height: 200rpx; width: 250rpx; margin: 20rpx;"/>
+                <view style="margin-left: 70rpx;">意见中心</view>
+              </view>
+            </view>  
+          </swiper-item>
+          <swiper-item >
+            <view style="display: flex;">
+              <view style="width: 50%;">
+              <image src="/static/huodon.png" style="border-radius: 300rpx; height: 200rpx; width: 250rpx; margin: 20rpx;"/>
+              <view style="margin-left: 70rpx;">活动管理</view>
+              </view>
+              <view style="width: 50%;">
+                <image src="/static/class.png" style="border-radius: 300rpx; height: 200rpx; width: 250rpx; margin: 20rpx;"/>
+                <view style="margin-left: 70rpx;">课堂管理</view>
+              </view>
+            </view>
+          </swiper-item>
+          <swiper-item >
+            <view style="display: flex;">
+              <view style="width: 50%;">
+              <image src="/static/ronyu.png" style="border-radius: 300rpx; height: 200rpx; width: 250rpx; margin: 20rpx;"/>
+              <view style="margin-left: 70rpx;">证书管理</view>
+              </view>
+              <view style="width: 50%;">
+                <image src="/static/vedio.png" style="border-radius: 300rpx; height: 200rpx; width: 250rpx; margin: 20rpx;"/>
+                <view style="margin-left: 70rpx;">视频课管理</view>
+              </view>
+            </view>
+           
+          </swiper-item>
+        </swiper>
+        <view>
+        <view style="font-size: x-large; color:chocolate; margin-left: 35%;">课程热度</view>
+        <scroll-view scroll-y="true" style="height: 500rpx;">
+          <block wx:for="{{Hots}}" wx:key="url">
+            <view style="display: flex; height: 60rpx;">
+              <view style="width: 20%; font-size:x-large;">{{item.name}}</view>
+              <view style="background-color: {{item.color}}; width: {{item.width}};"></view>
+              <image src="{{item.url}}" style="height: 60rpx;width: 60rpx;"></image>
+            </view>
+          </block>
+          </scroll-view>
+        </view>
+      </view>
+    </block>
+
+    <!-- 第二个tab -->
+    <block wx:if="{{tabIndex == 1}}">
+      <view style="height: 1000rpx; display: flex; width: 100%; border: 3rpx solid #faca82;">
+        <view style="width: 40%; height: 100%; border: 3rpx solid #faca82;"> 
+          <scroll-view scroll-y="true" style="height: 1000rpx;">
+            <block wx:for="{{Hots}}" wx:key="id">
+              <view style="width: 100%; height: 100rpx; display: flex; background-color: {{item.color}};border: 3rpx solid #faca82; "  >
+                <view style="margin: 25rpx;">{{item.name}}</view>
+              </view>
+            </block>
+          </scroll-view>
+        </view>
+        <view style="width: 70%; height: 100%; border: 3rpx solid #faca82;">
+          <scroll-view scroll-y="true" style="height: 1000rpx;">
+            <block wx:for="{{Hots}}" wx:key="id">
+              <view style="width: 100%; height: 100rpx; display: flex; border: 3rpx solid #faca82;" >
+                <view style="margin: 25rpx;">{{item.name}}</view>
+              </view>
+            </block>
+          </scroll-view>
+        </view>
+      </view>
+    </block>
+
+    <!-- 第三个tab -->
+    <block wx:if="{{tabIndex == 2}}">
+      <view>附近页面</view>
+    </block>
+  </view>
+</view>
